--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
       <p>Discover fast, fun, and addictive games built for nonstop entertainment. Lightweight, smooth, and exciting gameplay.</p>
       
       <div class="cta">
-        <button class="btn">Download APK</button>
+       <a href="https://tirangaagame.games/" class="btn" target="_blank">Tiranga Game APK</a>
         <button class="btn secondary">Explore Features</button>
       </div>
 
